Favorites and view are implemented and improvement

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,64 +1,3 @@
 <ion-app>
-    <ion-split-pane contentId="menu-content">
-        <ion-menu contentId="menu-content">
-            <ion-header>
-                <ion-toolbar >
-                    <ion-item *ngIf="!authenticated" >
-                        <ion-avatar  slot="start">
-                            <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"
-                                alt="https://cdn2.iconfinder.com/data/icons/scenarium-vol-4/128/002_avatar_man_profile_account_user_male-128.png">
-                        </ion-avatar>
-                        <ion-label>Stylecoffee</ion-label>
-                    </ion-item>
-                    <ion-item *ngIf="authenticated"  routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/profile">
-                        <ion-avatar  slot="start">
-                            <img [src]="currentUser.avatar" *ngIf="currentUser.avatar"
-                                alt="https://cdn2.iconfinder.com/data/icons/scenarium-vol-4/128/002_avatar_man_profile_account_user_male-128.png">
-                        </ion-avatar>
-                        <ion-label>{{ currentUser.usuario }}</ion-label><br>
-                        <ion-label>{{ currentUser.email }}</ion-label>
-                    </ion-item>
-                </ion-toolbar>
-            </ion-header>
-            <ion-content>
-                <ion-list color="medium">
-                    <ion-menu-toggle  *ngIf="!authenticated"  auto-hide="false">
-                        <ion-item-divider [routerDirection]="'root'" routerLink="/tabs">
-                            <ion-icon slot="start" name="home"></ion-icon>
-                            <ion-label>
-                                Home
-                            </ion-label>
-                        </ion-item-divider>
-                        <ion-item-divider [routerDirection]="'root'" routerLink="/login">
-                            <ion-icon slot="start" name="person"></ion-icon>
-                            <ion-label>
-                                login
-                            </ion-label>
-                        </ion-item-divider>
-                        <ion-item-divider [routerDirection]="'root'" routerLink="/list">
-                            <ion-icon slot="start" name="settings"></ion-icon>
-                            <ion-label>
-                                Ajustes
-                            </ion-label>
-                        </ion-item-divider>
-                    </ion-menu-toggle>
-                    <ion-menu-toggle  *ngIf="authenticated" auto-hide="false">
-                        <ion-item-divider [routerDirection]="'root'" routerLink="/tabs">
-                            <ion-icon slot="start" name="home"></ion-icon>
-                            <ion-label>
-                                Home
-                            </ion-label>
-                        </ion-item-divider>
-                        <ion-item-divider [routerDirection]="'root'" routerLink="/cardlist">
-                            <ion-icon slot="start" name="person"></ion-icon>
-                            <ion-label>
-                                card
-                            </ion-label>
-                        </ion-item-divider>
-                    </ion-menu-toggle>
-                </ion-list>
-            </ion-content>
-        </ion-menu>
-    <ion-router-outlet main id="menu-content"></ion-router-outlet>
-  </ion-split-pane>
+    <ion-router-outlet main></ion-router-outlet>
 </ion-app>
