--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -6,10 +6,10 @@
     <ion-title> {{title}} </ion-title>
   </ion-toolbar>
   <ion-segment value='login'>
-    <ion-segment-button value="login"  (ionSelect)="segmentButtonClicked($event)">
+    <ion-segment-button value="login"  (ionSelect)="segmentButtonClicked($event.target.value)">
       <ion-icon name="log-in"></ion-icon>Iniciar Sessión
     </ion-segment-button>
-    <ion-segment-button value="register"  (ionSelect)="segmentButtonClicked($event)">
+    <ion-segment-button value="register"  (ionSelect)="segmentButtonClicked($event.target.value)">
       <ion-icon name="person-add"></ion-icon>Registrar-se
     </ion-segment-button>
   </ion-segment>
@@ -43,13 +43,12 @@
             <ion-item *ngIf="tabs === 'register'">
               <ion-icon name="people"></ion-icon>
               <ion-label>Tipo de usuario</ion-label>
-              <ion-select placeholder="Eligue el tipo de usuario" 
-              formControlName="tipo">
+              <ion-select placeholder="Eligue el tipo de usuario" formControlName="tipo">
                 <ion-select-option value="admin">Admin</ion-select-option>
                 <ion-select-option value="client">Client</ion-select-option>
               </ion-select>
             </ion-item>
-            <ion-button class="btn btn-lg btn-primary pull-xs-right" type="submit">
+            <ion-button expand="block" shape="round" fill="outline" type="submit">
                 <ion-icon name="person"></ion-icon>{{ title }}
             </ion-button>
           </ion-list>
