--- a/src/app/coffee-details/coffee-details.component.html
+++ b/src/app/coffee-details/coffee-details.component.html
@@ -1,14 +1,11 @@
 <ion-header>
-  <ion-toolbar >
+  <ion-toolbar [color]="authcolor">
       <ion-buttons slot="start">
         <ion-back-button></ion-back-button>
       </ion-buttons>
       <ion-title>
         Details
       </ion-title>
-      <ion-button slot="end">
-        <ion-icon name="search"></ion-icon>
-      </ion-button>
     </ion-toolbar>
 </ion-header>
 
