--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-  <ion-tab-bar  slot="start" *ngIf="!auth">
+  <ion-tab-bar slot="start" *ngIf="!auth">
     <ion-tab-button tab="tab1">
       <ion-icon name="home"></ion-icon>
       <ion-label>Pagina principal</ion-label>
@@ -9,8 +9,12 @@
       <ion-label>Eventos</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
-  <ion-tab-bar slot="start" *ngIf="auth">
-    <ion-tab-button routerLink="/list">
+  <ion-tab-bar slot="start" *ngIf="auth" color="dark" ion-padding>
+    <ion-tab-button tab="tab1">
+      <ion-icon name="home"></ion-icon>
+      <ion-label>Principal</ion-label>
+    </ion-tab-button>
+    <ion-tab-button routerLink="/favorites">
       <ion-icon name="heart"></ion-icon>
       <ion-label>Favoritos</ion-label>
     </ion-tab-button>
@@ -22,7 +26,7 @@
       <ion-icon name="bookmarks"></ion-icon>
       <ion-label>Reservas</ion-label>
     </ion-tab-button>
-    <ion-tab-button routerLink="/events">
+    <ion-tab-button tab="tab3">
       <ion-icon name="calendar"></ion-icon>
       <ion-label>Eventos</ion-label>
     </ion-tab-button>
